--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
+    "nodemailer": "^6.9.15",
     "stellar": "file:..",
     "stream-chat": "^8.60.0"
   },
