--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,12 @@
     "@stream-io/video-react-sdk": "^1.14.4",
     "@tanstack/react-query": "^5.74.4",
     "axios": "^1.8.4",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-router": "^7.5.1",
     "react-router-dom": "^7.9.4",
     "stellar": "file:..",
